plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5' // Spring Boot 플러그인
    id 'io.spring.dependency-management' version '1.1.6' // 의존성 관리를 위한 플러그인
}

group = 'com.mysite' // 프로젝트 그룹 ID
version = '0.0.1-SNAPSHOT' // 프로젝트 버전

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17) // Java 17 사용
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral() // Maven Central 저장소 사용
    maven { url 'https://repo.maven.apache.org/maven2' } // Maven 공식 저장소 추가
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter' // Spring Boot 기본 의존성
    implementation 'org.springframework.boot:spring-boot-starter-web' // Spring MVC 및 REST API용 Starter
    implementation 'org.springframework.boot:spring-boot-starter-validation' // 데이터 유효성 검증 (Validation)

    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3' // MyBatis 통합

	// Spring Security 인증
    implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security Starter
    
	// JWT 라이브러리 (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6' // 구현체 추가
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6' // Jackson 사용을 위한 JJWT 확장

    // Database
    implementation 'mysql:mysql-connector-java:8.0.33' // MySQL 드라이버 최신 안정 버전

    // Jakarta Servlet API
//    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok' // Lombok 컴파일 타임 의존성
    annotationProcessor 'org.projectlombok:lombok' // Lombok 애노테이션 프로세서

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Spring Boot 테스트 의존성
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3' // MyBatis 테스트 의존성
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // JUnit 플랫폼 런처
    testImplementation 'org.springframework.security:spring-security-test' // Spring Security 테스트
    testCompileOnly 'org.projectlombok:lombok' // Lombok 테스트 컴파일
    testAnnotationProcessor 'org.projectlombok:lombok' // Lombok 애노테이션 프로세서 (테스트용)

    // lombok
    compileOnly 'org.projectlombok:lombok' // Lombok 컴파일 타임 의존성
    annotationProcessor 'org.projectlombok:lombok' // Lombok 애노테이션 프로세서
    
    // 개발용 도구
    developmentOnly 'org.springframework.boot:spring-boot-devtools' // DevTools 의존성
    
    // PayPal SDK
    implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'
}

tasks.named('test') {
    useJUnitPlatform() // JUnit 플랫폼 사용
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters" // Java 컴파일러 -parameters 옵션 추가
}

